env file aadded

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #DATABASE CREDENTIAL
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=amitabh.1234@
-DB_NAME=startupjobs
+DB_HOST=database-2.cxgxwiova66j.us-east-2.rds.amazonaws.com
+DB_USER=admin
+DB_PASS=amitabh1234
+DB_NAME=startupjob
 
 #SendGrid API_KEY
 
