--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./app.ts",
+    "dev": "pm2 start ts-node app.ts",
+    "start": "npm install -f",
     "staging": "",
     "production": ""
   },
@@ -26,6 +27,7 @@
     "@types/typescript": "^2.0.0",
     "app-root-path": "^3.0.0",
     "async-redis": "^1.1.7",
+    "aws-sdk": "^2.724.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dom-parser": "^0.1.6",
@@ -45,6 +47,7 @@
     "sendgrid": "^5.2.3",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
+    "twilio": "^3.48.1",
     "typedi": "^0.8.0",
     "winston": "^3.2.1",
     "xmldom": "^0.3.0"
