--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pm2 start ts-node app.ts",
+    "dev": "ts-node app.ts",
+    "check": "echo linux system:\n1.command - \nnpm run posix-clean\nDescription: clean dist folder or removed it.\n\n2.command - \nnpm run posix-prod-build\nDescription: build typescript to js in dis folder, copy .env, index.js, package.josn, view folder, assests folder.\n\n3.command - \nnpm run posix-production\nDescription:runs in superuser permission 'sudo' with pm2 app.ts node code, index.js for angular prod build code serve.\n\n4.command - \nnpm run posix-stop\nDescription:it will stop super user process that started with superuser pm2\n\n\n WINDOWS Instructions:\n**********NOTE**********\nALl descriprtions are same as posix command Description\n1.command - \nnpm run win32-clean\n\n2.command -\nnpm run win32-prod-build\n\n3.command -\nnpm run win32-production\n\n4.command -\nnpm run win32 stop",
     "start": "npm install -f",
+    "posix-clean": "sudo rm -r dist -f",
+    "posix-prod-build": "tsc app.ts --outDir dist && cp .env dist/.env && cp index.js dist/index.js && cp package.json dist/package.json && cp -r view dist/view && cp -r assets dist/assets",
     "staging": "",
-    "production": ""
+    "posix-production": "cd dist && echo Starting Server with node production && sudo  pm2 start index.js && sudo pm2 start app.js",
+    "posix-stop": " sudo pm2 kill && sudo pm2 status",
+    "win32-clean": "rm -r dist -f",
+    "win32-prod-build": "tsc app.ts --outDir dist && cp .env dist/.env && cp index.js dist/index.js && cp package.json dist/package.json && cp -r view dist/view && cp -r assets dist/assets",
+    "win32-production": "cd dist && echo Starting Server with node production && sudo  pm2 start index.js && sudo pm2 start app.js",
+    "win32-stop": " sudo pm2 kill && sudo pm2 status"
   },
   "author": "",
   "license": "ISC",
