--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.6",
     "@types/fs-extra": "^9.0.1",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/morgan": "^1.9.1",
     "@types/mssql": "^6.0.0",
     "@types/multer": "^1.4.3",
     "@types/mysql": "^2.15.14",
@@ -47,6 +48,7 @@
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.4",
+    "morgan": "^1.10.0",
     "mssql": "^6.2.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
