--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node app.ts",
+    "dev": "ts-node-dev app.ts",
     "check": "echo linux system:\n1.command - \nnpm run posix-clean\nDescription: clean dist folder or removed it.\n\n2.command - \nnpm run posix-prod-build\nDescription: build typescript to js in dis folder, copy .env, index.js, package.josn, view folder, assests folder.\n\n3.command - \nnpm run posix-production\nDescription:runs in superuser permission 'sudo' with pm2 app.ts node code, index.js for angular prod build code serve.\n\n4.command - \nnpm run posix-stop\nDescription:it will stop super user process that started with superuser pm2\n\n\n WINDOWS Instructions:\n**********NOTE**********\nALl descriprtions are same as posix command Description\n1.command - \nnpm run win32-clean\n\n2.command -\nnpm run win32-prod-build\n\n3.command -\nnpm run win32-production\n\n4.command -\nnpm run win32 stop",
     "start": "npm install -f",
     "posix-clean": "sudo rm -r dist -f",
@@ -38,13 +38,19 @@
     "async-redis": "^1.1.7",
     "aws-sdk": "^2.724.0",
     "body-parser": "^1.19.0",
+    "compress-images": "^1.9.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dom-parser": "^0.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.7",
     "express-validator": "^6.4.0",
     "fs-extra": "^9.0.1",
+    "gifsicle": "^5.1.0",
     "http": "0.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.4",
@@ -64,6 +70,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "imagemin": "^7.0.1",
     "tsc-watch": "^4.1.0"
   },
   "description": ""
